// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root"
>
  <label
    className="inputWrap
          labelPositionAfter"
    htmlFor="test"
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      id="test"
      onChange={null}
      required={false}
      type="checkbox"
    />
    <span
      className="label"
    >
      <span
        className="labelInner"
        id="test__label"
      >
        label
      </span>
    </span>
  </label>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        isRootStateWarning"
>
  <label
    className="inputWrap
          labelPositionAfter"
    htmlFor="test"
  >
    <input
      checked={true}
      className="input"
      disabled={true}
      id="test"
      onChange={null}
      required={true}
      type="checkbox"
      value="value"
    />
    <span
      className="label"
    >
      <span
        className="labelInner"
        id="test__label"
      >
        label
      </span>
    </span>
  </label>
  <div
    className="description"
    id="test__descriptionText"
  >
    some help
  </div>
  <div
    className="error"
    id="test__errorText"
  >
    some error
  </div>
</div>
`;

exports[`rendering renders correctly with html element attributes 1`] = `
<div
  className="root"
>
  <label
    className="inputWrap
          labelPositionAfter"
    htmlFor="test"
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      id="test"
      onChange={null}
      required={false}
      tabIndex={-1}
      type="checkbox"
    />
    <span
      className="label"
    >
      <span
        className="labelInner"
        id="test__label"
      >
        label
      </span>
    </span>
  </label>
</div>
`;
